--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,5 @@
----
-title: 'Reproducible Research: Peer Assessment 1'
-output: html_document
----
+
+# Reproducible Research: Peer Assessment 1
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
